--- a/fases-ecohotel.html
+++ b/fases-ecohotel.html
@@ -58,6 +58,16 @@
       line-height: 1.6;
       font-size: 15px;
     }
+    .document-link {
+      display: inline-block;
+      margin-top: 10px;
+      color: #1f6feb;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .document-link:hover {
+      text-decoration: underline;
+    }
     .back-link {
       display: inline-block;
       margin-top: 40px;
@@ -85,61 +95,72 @@
       <p>Infraestructura proyectada con materiales sostenibles (madera certificada, bambú), senderos ecológicos señalizados y áreas interactivas.</p>
       <p>Actores clave: Instituto de Turismo del Meta, Cormacarena y universidades locales.</p>
       <p>Impacto: Posicionar a Villavicencio como referente de turismo de naturaleza, reforestación, protección del patrimonio y diversificación económica.</p>
+      <a class="document-link" href="soportes/investigaciones/ecohotel-documentos.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <h3>Fases del Proyecto (Embudo de Soluciones)</h3>
 
     <div class="card">
       <h4>1. Integración de Políticas Públicas</h4>
-      <p><strong>Objetivo:</strong> Alinear el proyecto con las directrices del Ministerio de Comercio, Industria y Turismo (MinCIT) mediante el análisis del marco estatal y gubernamental que interviene en el sector turismo.</p>
+      <p><strong>Objetivo:</strong> Alinear el proyecto con las directrices del MinCIT mediante el análisis del marco estatal y gubernamental que interviene en el sector turismo.</p>
+      <a class="document-link" href="soportes/investigaciones/fase1.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="card">
       <h4>2. Fortalecimiento de Inversión y Financiamiento</h4>
       <p><strong>Objetivo:</strong> Identificar fuentes de capital como créditos (Bancóldex), subsidios gubernamentales, inversión privada y crowdfunding para asegurar la viabilidad económica del proyecto.</p>
+      <a class="document-link" href="soportes/investigaciones/fase2.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="card">
       <h4>3. Incremento del Turismo Ecológico</h4>
       <p><strong>Objetivo:</strong> Atraer visitantes interesados en la conservación de la biodiversidad y el contacto directo con la naturaleza.</p>
+      <a class="document-link" href="soportes/investigaciones/fase3.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="card">
       <h4>4. Coordinación Interinstitucional</h4>
       <p><strong>Objetivo:</strong> Establecer mecanismos de articulación entre instituciones públicas y el sector privado para optimizar la gestión del proyecto dentro del marco normativo.</p>
+      <a class="document-link" href="soportes/investigaciones/fase4.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="card">
       <h4>5. Involucramiento de la Población Local</h4>
       <p><strong>Objetivo:</strong> Integrar a la comunidad en el impulso turístico, generando empleos y oportunidades de desarrollo para los habitantes de la zona.</p>
+      <a class="document-link" href="soportes/investigaciones/fase5.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="card">
       <h4>6. Visualización de Espacios con Potencial</h4>
       <p><strong>Objetivo:</strong> Identificar y reconocer áreas estratégicas con alto valor biológico para el desarrollo de la infraestructura y el jardín botánico.</p>
+      <a class="document-link" href="soportes/investigaciones/fase6.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="card">
       <h4>7. Formación Turística Sostenible</h4>
       <p><strong>Objetivo:</strong> Desarrollar programas educativos y talleres sobre sostenibilidad y botánica tanto para el personal como para los huéspedes.</p>
+      <a class="document-link" href="soportes/investigaciones/fase7.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="card">
       <h4>8. Uso Responsable de Recursos Naturales</h4>
       <p><strong>Objetivo:</strong> Implementar prácticas operativas sostenibles, como uso de energías renovables, manejo de residuos y captación de agua lluvia.</p>
+      <a class="document-link" href="soportes/investigaciones/fase8.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="card">
       <h4>9. Fomento de Incentivos</h4>
       <p><strong>Objetivo:</strong> Aplicar beneficios y estímulos diseñados para empresas que promuevan prácticas ecoturísticas y de conservación.</p>
+      <a class="document-link" href="soportes/investigaciones/fase9.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <div class="card">
       <h4>10. Líneas de Crédito y Subsidios Específicos</h4>
       <p><strong>Objetivo:</strong> Acceder a mecanismos financieros sectoriales diseñados para proyectos de infraestructura ecológica y desarrollo turístico sostenible.</p>
+      <a class="document-link" href="soportes/investigaciones/fase10.pdf" target="_blank">Ir a documento</a>
     </div>
 
-    <a class="back-link" href="investigaciones.html">← Volver a Investigaciones</a>
+    <a class="back-link" href="index.html">← Volver a página principal</a>
   </div>
 
 </body>
