--- a/fases-ecohotel.html
+++ b/fases-ecohotel.html
@@ -43,30 +43,28 @@
       transform: translateY(-3px);
       box-shadow: 0 10px 25px rgba(0,0,0,0.12);
     }
-    .card h3, .card h4 {
+    .card h3 {
       margin: 0 0 10px 0;
       color: #1f6feb;
-    }
-    .card h3 {
-      font-size: 22px;
-    }
-    .card h4 {
-      font-size: 18px;
+      font-size: 20px;
     }
     .card p {
-      margin: 8px 0;
+      margin: 0 0 12px 0;
       line-height: 1.6;
       font-size: 15px;
     }
-    .document-link {
+    .card a.document-link {
       display: inline-block;
-      margin-top: 10px;
-      color: #1f6feb;
       text-decoration: none;
+      background-color: #1f6feb;
+      color: #fff;
+      padding: 8px 14px;
+      border-radius: 6px;
       font-weight: bold;
+      transition: background-color 0.3s;
     }
-    .document-link:hover {
-      text-decoration: underline;
+    .card a.document-link:hover {
+      background-color: #155bb5;
     }
     .back-link {
       display: inline-block;
@@ -80,88 +78,86 @@
     }
   </style>
 </head>
-
 <body>
 
-  <div class="container">
-    <h2>Proyecto Ecohotel “Los Arrendajos”</h2>
-    <p class="description">
-      El proyecto Eco-hotel Los Arrendajos es una iniciativa de turismo sostenible ubicada en Villavicencio, Meta, que integra el hospedaje ecológico con la conservación ambiental a través de un jardín botánico educativo y sensorial. Su propósito central es ofrecer una experiencia de turismo regenerativo que promueva el uso responsable de los recursos naturales y la educación ambiental.
-    </p>
+<div class="container">
+  <h2>Fases del Proyecto Ecohotel “Los Arrendajos”</h2>
+  <p class="description">
+    Desarrollo integral del proyecto de turismo sostenible “Ecohotel Los Arrendajos”, organizado por fases con sus respectivos documentos de soporte. Cada fase refleja un paso clave en la formulación y planificación del proyecto.
+  </p>
 
-    <div class="card">
-      <h3>Descripción general</h3>
-      <p>Combina hospedaje confortable, alimentación saludable basada en productos locales, tratamientos de spa con ingredientes naturales y experiencias educativas en el jardín botánico.</p>
-      <p>Infraestructura proyectada con materiales sostenibles (madera certificada, bambú), senderos ecológicos señalizados y áreas interactivas.</p>
-      <p>Actores clave: Instituto de Turismo del Meta, Cormacarena y universidades locales.</p>
-      <p>Impacto: Posicionar a Villavicencio como referente de turismo de naturaleza, reforestación, protección del patrimonio y diversificación económica.</p>
-      <a class="document-link" href="soportes/investigaciones/ecohotel-documentos.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <h3>Fases del Proyecto (Embudo de Soluciones)</h3>
-
-    <div class="card">
-      <h4>1. Integración de Políticas Públicas</h4>
-      <p><strong>Objetivo:</strong> Alinear el proyecto con las directrices del MinCIT mediante el análisis del marco estatal y gubernamental que interviene en el sector turismo.</p>
-      <a class="document-link" href="soportes/investigaciones/fase1.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <div class="card">
-      <h4>2. Fortalecimiento de Inversión y Financiamiento</h4>
-      <p><strong>Objetivo:</strong> Identificar fuentes de capital como créditos (Bancóldex), subsidios gubernamentales, inversión privada y crowdfunding para asegurar la viabilidad económica del proyecto.</p>
-      <a class="document-link" href="soportes/investigaciones/fase2.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <div class="card">
-      <h4>3. Incremento del Turismo Ecológico</h4>
-      <p><strong>Objetivo:</strong> Atraer visitantes interesados en la conservación de la biodiversidad y el contacto directo con la naturaleza.</p>
-      <a class="document-link" href="soportes/investigaciones/fase3.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <div class="card">
-      <h4>4. Coordinación Interinstitucional</h4>
-      <p><strong>Objetivo:</strong> Establecer mecanismos de articulación entre instituciones públicas y el sector privado para optimizar la gestión del proyecto dentro del marco normativo.</p>
-      <a class="document-link" href="soportes/investigaciones/fase4.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <div class="card">
-      <h4>5. Involucramiento de la Población Local</h4>
-      <p><strong>Objetivo:</strong> Integrar a la comunidad en el impulso turístico, generando empleos y oportunidades de desarrollo para los habitantes de la zona.</p>
-      <a class="document-link" href="soportes/investigaciones/fase5.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <div class="card">
-      <h4>6. Visualización de Espacios con Potencial</h4>
-      <p><strong>Objetivo:</strong> Identificar y reconocer áreas estratégicas con alto valor biológico para el desarrollo de la infraestructura y el jardín botánico.</p>
-      <a class="document-link" href="soportes/investigaciones/fase6.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <div class="card">
-      <h4>7. Formación Turística Sostenible</h4>
-      <p><strong>Objetivo:</strong> Desarrollar programas educativos y talleres sobre sostenibilidad y botánica tanto para el personal como para los huéspedes.</p>
-      <a class="document-link" href="soportes/investigaciones/fase7.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <div class="card">
-      <h4>8. Uso Responsable de Recursos Naturales</h4>
-      <p><strong>Objetivo:</strong> Implementar prácticas operativas sostenibles, como uso de energías renovables, manejo de residuos y captación de agua lluvia.</p>
-      <a class="document-link" href="soportes/investigaciones/fase8.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <div class="card">
-      <h4>9. Fomento de Incentivos</h4>
-      <p><strong>Objetivo:</strong> Aplicar beneficios y estímulos diseñados para empresas que promuevan prácticas ecoturísticas y de conservación.</p>
-      <a class="document-link" href="soportes/investigaciones/fase9.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <div class="card">
-      <h4>10. Líneas de Crédito y Subsidios Específicos</h4>
-      <p><strong>Objetivo:</strong> Acceder a mecanismos financieros sectoriales diseñados para proyectos de infraestructura ecológica y desarrollo turístico sostenible.</p>
-      <a class="document-link" href="soportes/investigaciones/fase10.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <a class="back-link" href="index.html">← Volver a página principal</a>
+  <!-- Fase 1 -->
+  <div class="card">
+    <h3>Fase 1: Estudio Normativo</h3>
+    <p>Análisis de normativas, regulaciones y requisitos legales aplicables al proyecto Ecohotel.</p>
+    <a class="document-link" href="soportes/investigaciones/fase1-estudio-normativo.pdf" target="_blank">Ir a documento</a>
   </div>
+
+  <!-- Fase 2 -->
+  <div class="card">
+    <h3>Fase 2: Generalidades del Proyecto</h3>
+    <p>Presentación del proyecto Ecohotel Los Arrendajos: objetivos, alcance y contexto general.</p>
+    <a class="document-link" href="soportes/investigaciones/fase2-generalidades.pdf" target="_blank">Ir a documento</a>
+  </div>
+
+  <!-- Fase 3 -->
+  <div class="card">
+    <h3>Fase 3: Mapa de Valor</h3>
+    <p>Representación de la propuesta de valor del Ecohotel y sus elementos estratégicos para clientes y stakeholders.</p>
+    <a class="document-link" href="soportes/investigaciones/fase3-mapa-valor.pdf" target="_blank">Ir a documento</a>
+  </div>
+
+  <!-- Fase 4 -->
+  <div class="card">
+    <h3>Fase 4: Mapeo de Stakeholders</h3>
+    <p>Identificación y análisis de los grupos de interés y actores clave del proyecto.</p>
+    <a class="document-link" href="soportes/investigaciones/fase4-mapeo-stakeholders.pdf" target="_blank">Ir a documento</a>
+  </div>
+
+  <!-- Fase 5 -->
+  <div class="card">
+    <h3>Fase 5: Relación de Actores</h3>
+    <p>Listado y descripción de los actores involucrados en el desarrollo del Ecohotel.</p>
+    <a class="document-link" href="soportes/investigaciones/fase5-relacion-actores.pdf" target="_blank">Ir a documento</a>
+  </div>
+
+  <!-- Fase 6 -->
+  <div class="card">
+    <h3>Fase 6: Stakeholders</h3>
+    <p>Perfil y responsabilidades de cada stakeholder dentro del proyecto.</p>
+    <a class="document-link" href="soportes/investigaciones/fase6-stakeholders.pdf" target="_blank">Ir a documento</a>
+  </div>
+
+  <!-- Fase 7 -->
+  <div class="card">
+    <h3>Fase 7: Mercado Potencial</h3>
+    <p>Análisis del mercado y la demanda potencial para el Ecohotel Los Arrendajos.</p>
+    <a class="document-link" href="soportes/investigaciones/fase7-mercado-potencial.pdf" target="_blank">Ir a documento</a>
+  </div>
+
+  <!-- Fase 8 -->
+  <div class="card">
+    <h3>Fase 8: Proyección de Mercado</h3>
+    <p>Estimación de ingresos y demanda a futuro para el proyecto Ecohotel.</p>
+    <a class="document-link" href="soportes/investigaciones/fase8-proyeccion-mercado.pdf" target="_blank">Ir a documento</a>
+  </div>
+
+  <!-- Fase 9 -->
+  <div class="card">
+    <h3>Fase 9: Modelo CANVAS</h3>
+    <p>Representación gráfica de la estructura de negocio y propuesta de valor del Ecohotel.</p>
+    <a class="document-link" href="soportes/investigaciones/fase9-canvas.pdf" target="_blank">Ir a documento</a>
+  </div>
+
+  <!-- Fase 10 -->
+  <div class="card">
+    <h3>Fase 10: Tipos de Involucrados</h3>
+    <p>Clasificación de los diferentes tipos de actores y su grado de involucramiento en el proyecto.</p>
+    <a class="document-link" href="soportes/investigaciones/fase10-tipos-involucrados.pdf" target="_blank">Ir a documento</a>
+  </div>
+
+  <a class="back-link" href="index.html">← Volver a la página principal</a>
+</div>
 
 </body>
 </html>
