--- a/fases-ecohotel.html
+++ b/fases-ecohotel.html
@@ -83,80 +83,80 @@
 <div class="container">
   <h2>Fases del Proyecto Ecohotel “Los Arrendajos”</h2>
   <p class="description">
-    Desarrollo integral del proyecto de turismo sostenible “Ecohotel Los Arrendajos”, organizado por fases con sus respectivos documentos de soporte. Cada fase refleja un paso clave en la formulación y planificación del proyecto.
+    El proyecto Eco-hotel Los Arrendajos es una iniciativa de turismo sostenible ubicada en Villavicencio, Meta, que integra hospedaje ecológico con conservación ambiental. Cada fase incluye un documento con información detallada.
   </p>
 
   <!-- Fase 1 -->
   <div class="card">
-    <h3>Fase 1: Estudio Normativo</h3>
-    <p>Análisis de normativas, regulaciones y requisitos legales aplicables al proyecto Ecohotel.</p>
+    <h3>Fase 1: Integración de Políticas Públicas</h3>
+    <p>Analiza el marco estatal y gubernamental que interviene en el sector turismo para alinear el proyecto con el MinCIT.</p>
     <a class="document-link" href="soportes/investigaciones/fase1-estudio-normativo.pdf" target="_blank">Ir a documento</a>
   </div>
 
   <!-- Fase 2 -->
   <div class="card">
-    <h3>Fase 2: Generalidades del Proyecto</h3>
-    <p>Presentación del proyecto Ecohotel Los Arrendajos: objetivos, alcance y contexto general.</p>
+    <h3>Fase 2: Fortalecimiento de Inversión y Financiamiento</h3>
+    <p>Identificación de fuentes de capital como créditos, subsidios, inversión privada y crowdfunding para viabilidad económica.</p>
     <a class="document-link" href="soportes/investigaciones/fase2-generalidades.pdf" target="_blank">Ir a documento</a>
   </div>
 
   <!-- Fase 3 -->
   <div class="card">
-    <h3>Fase 3: Mapa de Valor</h3>
-    <p>Representación de la propuesta de valor del Ecohotel y sus elementos estratégicos para clientes y stakeholders.</p>
+    <h3>Fase 3: Incremento del Turismo Ecológico</h3>
+    <p>Atraer visitantes interesados en conservación de biodiversidad y contacto directo con la naturaleza.</p>
     <a class="document-link" href="soportes/investigaciones/fase3-mapa-valor.pdf" target="_blank">Ir a documento</a>
   </div>
 
   <!-- Fase 4 -->
   <div class="card">
-    <h3>Fase 4: Mapeo de Stakeholders</h3>
-    <p>Identificación y análisis de los grupos de interés y actores clave del proyecto.</p>
+    <h3>Fase 4: Coordinación Interinstitucional</h3>
+    <p>Articulación entre instituciones públicas y sector privado para optimizar la gestión del proyecto.</p>
     <a class="document-link" href="soportes/investigaciones/fase4-mapeo-stakeholders.pdf" target="_blank">Ir a documento</a>
   </div>
 
   <!-- Fase 5 -->
   <div class="card">
-    <h3>Fase 5: Relación de Actores</h3>
-    <p>Listado y descripción de los actores involucrados en el desarrollo del Ecohotel.</p>
+    <h3>Fase 5: Involucramiento de la Población Local</h3>
+    <p>Integrar a la comunidad en el impulso turístico, generando empleo y desarrollo local.</p>
     <a class="document-link" href="soportes/investigaciones/fase5-relacion-actores.pdf" target="_blank">Ir a documento</a>
   </div>
 
   <!-- Fase 6 -->
   <div class="card">
-    <h3>Fase 6: Stakeholders</h3>
-    <p>Perfil y responsabilidades de cada stakeholder dentro del proyecto.</p>
+    <h3>Fase 6: Visualización de Espacios con Potencial</h3>
+    <p>Identificación técnica de áreas estratégicas con alto valor biológico para infraestructura y jardín botánico.</p>
     <a class="document-link" href="soportes/investigaciones/fase6-stakeholders.pdf" target="_blank">Ir a documento</a>
   </div>
 
   <!-- Fase 7 -->
   <div class="card">
-    <h3>Fase 7: Mercado Potencial</h3>
-    <p>Análisis del mercado y la demanda potencial para el Ecohotel Los Arrendajos.</p>
+    <h3>Fase 7: Formación Turística Sostenible</h3>
+    <p>Programas educativos y talleres sobre sostenibilidad y botánica para personal y huéspedes.</p>
     <a class="document-link" href="soportes/investigaciones/fase7-mercado-potencial.pdf" target="_blank">Ir a documento</a>
   </div>
 
   <!-- Fase 8 -->
   <div class="card">
-    <h3>Fase 8: Proyección de Mercado</h3>
-    <p>Estimación de ingresos y demanda a futuro para el proyecto Ecohotel.</p>
+    <h3>Fase 8: Uso Responsable de Recursos Naturales</h3>
+    <p>Implementación de prácticas sostenibles: energías renovables, manejo de residuos y captación de agua lluvia.</p>
     <a class="document-link" href="soportes/investigaciones/fase8-proyeccion-mercado.pdf" target="_blank">Ir a documento</a>
   </div>
 
   <!-- Fase 9 -->
   <div class="card">
-    <h3>Fase 9: Modelo CANVAS</h3>
-    <p>Representación gráfica de la estructura de negocio y propuesta de valor del Ecohotel.</p>
+    <h3>Fase 9: Fomento de Incentivos</h3>
+    <p>Aplicación de beneficios para empresas que promueven prácticas ecoturísticas y de conservación.</p>
     <a class="document-link" href="soportes/investigaciones/fase9-canvas.pdf" target="_blank">Ir a documento</a>
   </div>
 
   <!-- Fase 10 -->
   <div class="card">
-    <h3>Fase 10: Tipos de Involucrados</h3>
-    <p>Clasificación de los diferentes tipos de actores y su grado de involucramiento en el proyecto.</p>
+    <h3>Fase 10: Líneas de Crédito y Subsidios Específicos</h3>
+    <p>Acceso a mecanismos financieros sectoriales diseñados para infraestructura ecológica y turismo sostenible.</p>
     <a class="document-link" href="soportes/investigaciones/fase10-tipos-involucrados.pdf" target="_blank">Ir a documento</a>
   </div>
 
-  <a class="back-link" href="index.html">← Volver a la página principal</a>
+  <a class="back-link" href="index.html">← Volver a página principal</a>
 </div>
 
 </body>
