--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="card">
           <h3>Documentos Oficiales SENA</h3>
           <p>Acta Académica, Certificado Final y Documento Oficial TCOCF.</p>
-          <a href="soportes/educacion/sena.html">Ver detalles</a>
+          <a href="sena.html">Ver detalles</a>
         </div>
       </div>
     </div>
