--- a/fases-ecohotel.html
+++ b/fases-ecohotel.html
@@ -48,12 +48,17 @@
       color: #1f6feb;
       font-size: 20px;
     }
+    .card h4 {
+      margin: 10px 0 6px 0;
+      color: #24292f;
+      font-size: 16px;
+    }
     .card p {
-      margin: 0 0 12px 0;
+      margin: 6px 0 10px 0;
       line-height: 1.6;
       font-size: 15px;
     }
-    .card a.document-link {
+    .card a {
       display: inline-block;
       text-decoration: none;
       background-color: #1f6feb;
@@ -62,8 +67,9 @@
       border-radius: 6px;
       font-weight: bold;
       transition: background-color 0.3s;
+      margin-top: 10px;
     }
-    .card a.document-link:hover {
+    .card a:hover {
       background-color: #155bb5;
     }
     .back-link {
@@ -78,86 +84,118 @@
     }
   </style>
 </head>
+
 <body>
 
-<div class="container">
-  <h2>Fases del Proyecto Ecohotel “Los Arrendajos”</h2>
-  <p class="description">
-    El proyecto Eco-hotel Los Arrendajos es una iniciativa de turismo sostenible ubicada en Villavicencio, Meta, que integra hospedaje ecológico con conservación ambiental. Cada fase incluye un documento con información detallada.
-  </p>
+  <div class="container">
+    <h2>Fases del Proyecto Ecohotel “Los Arrendajos”</h2>
+    <p class="description">
+      El proyecto Eco-hotel Los Arrendajos es una iniciativa de turismo sostenible ubicada en Villavicencio, Meta, que integra el hospedaje ecológico con la conservación ambiental a través de un jardín botánico educativo y sensorial. Su propósito central es ofrecer una experiencia de turismo regenerativo que promueva el uso responsable de los recursos naturales y la educación ambiental.
+    </p>
 
-  <!-- Fase 1 -->
-  <div class="card">
-    <h3>Fase 1: Integración de Políticas Públicas</h3>
-    <p>Analiza el marco estatal y gubernamental que interviene en el sector turismo para alinear el proyecto con el MinCIT.</p>
-    <a class="document-link" href="soportes/investigaciones/fase1-estudio-normativo.pdf" target="_blank">Ir a documento</a>
+    <!-- Fase 1 -->
+    <div class="card">
+      <h3>Fase 1: Estudio Normativo</h3>
+      <h4>Objetivo:</h4>
+      <p>Analizar el marco legal y regulatorio aplicable al sector turístico para garantizar el cumplimiento de normativas.</p>
+      <h4>Descripción:</h4>
+      <p>Se revisan leyes, decretos y reglamentaciones locales y nacionales relacionadas con turismo y sostenibilidad.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 2 -->
+    <div class="card">
+      <h3>Fase 2: Generalidades del Proyecto</h3>
+      <h4>Objetivo:</h4>
+      <p>Presentar la propuesta del Ecohotel Los Arrendajos, sus objetivos, alcance y contexto general.</p>
+      <h4>Descripción:</h4>
+      <p>Describe la propuesta de valor, infraestructura técnica, actores clave e impacto esperado del proyecto.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/generalidades-del-proyecto-del-ecohotel.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 3 -->
+    <div class="card">
+      <h3>Fase 3: Mapa de Valor</h3>
+      <h4>Objetivo:</h4>
+      <p>Representar los elementos estratégicos y la propuesta de valor del Ecohotel para clientes y stakeholders.</p>
+      <h4>Descripción:</h4>
+      <p>Se identifica lo que distingue al proyecto frente a la competencia y se clarifican beneficios clave para los visitantes.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 4 -->
+    <div class="card">
+      <h3>Fase 4: Mapeo de Stakeholders</h3>
+      <h4>Objetivo:</h4>
+      <p>Identificar y analizar los grupos de interés y actores clave del proyecto.</p>
+      <h4>Descripción:</h4>
+      <p>Se estudia el nivel de influencia y participación de cada stakeholder, buscando integrar intereses y cooperación.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 5 -->
+    <div class="card">
+      <h3>Fase 5: Relación de Actores</h3>
+      <h4>Objetivo:</h4>
+      <p>Listar y describir los actores involucrados en el proyecto para coordinar su participación.</p>
+      <h4>Descripción:</h4>
+      <p>Incluye comunidades locales, entidades gubernamentales y aliados estratégicos en el desarrollo del Ecohotel.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 6 -->
+    <div class="card">
+      <h3>Fase 6: Stakeholders</h3>
+      <h4>Objetivo:</h4>
+      <p>Definir perfiles, roles y responsabilidades de cada stakeholder dentro del proyecto.</p>
+      <h4>Descripción:</h4>
+      <p>Se asignan responsabilidades claras para garantizar la colaboración efectiva y la sostenibilidad del proyecto.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/stakeholders.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 7 -->
+    <div class="card">
+      <h3>Fase 7: Mercado Potencial</h3>
+      <h4>Objetivo:</h4>
+      <p>Analizar la demanda potencial del Ecohotel Los Arrendajos y sus oportunidades de mercado.</p>
+      <h4>Descripción:</h4>
+      <p>Incluye segmentación de clientes, estudios de competencia y proyecciones de demanda turística ecológica.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 8 -->
+    <div class="card">
+      <h3>Fase 8: Proyección de Mercado</h3>
+      <h4>Objetivo:</h4>
+      <p>Estimar ingresos y demanda futura del proyecto Ecohotel para asegurar la viabilidad económica.</p>
+      <h4>Descripción:</h4>
+      <p>Se proyectan ingresos, ocupación y tendencias de mercado en un horizonte de 5 a 10 años.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 9 -->
+    <div class="card">
+      <h3>Fase 9: Modelo CANVAS</h3>
+      <h4>Objetivo:</h4>
+      <p>Visualizar la estructura de negocio y la propuesta de valor del Ecohotel de manera estratégica.</p>
+      <h4>Descripción:</h4>
+      <p>Representa clientes, canales, ingresos, recursos, actividades clave y socios estratégicos del proyecto.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/modelo-CANVAS.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 10 -->
+    <div class="card">
+      <h3>Fase 10: Tipos de Involucrados</h3>
+      <h4>Objetivo:</h4>
+      <p>Clasificar los diferentes tipos de actores y su grado de participación en el proyecto.</p>
+      <h4>Descripción:</h4>
+      <p>Se categoriza según su rol, influencia y nivel de compromiso para optimizar la gestión del Ecohotel.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <a class="back-link" href="investigaciones.html">← Volver a la página principal</a>
+
   </div>
-
-  <!-- Fase 2 -->
-  <div class="card">
-    <h3>Fase 2: Fortalecimiento de Inversión y Financiamiento</h3>
-    <p>Identificación de fuentes de capital como créditos, subsidios, inversión privada y crowdfunding para viabilidad económica.</p>
-    <a class="document-link" href="soportes/investigaciones/fase2-generalidades.pdf" target="_blank">Ir a documento</a>
-  </div>
-
-  <!-- Fase 3 -->
-  <div class="card">
-    <h3>Fase 3: Incremento del Turismo Ecológico</h3>
-    <p>Atraer visitantes interesados en conservación de biodiversidad y contacto directo con la naturaleza.</p>
-    <a class="document-link" href="soportes/investigaciones/fase3-mapa-valor.pdf" target="_blank">Ir a documento</a>
-  </div>
-
-  <!-- Fase 4 -->
-  <div class="card">
-    <h3>Fase 4: Coordinación Interinstitucional</h3>
-    <p>Articulación entre instituciones públicas y sector privado para optimizar la gestión del proyecto.</p>
-    <a class="document-link" href="soportes/investigaciones/fase4-mapeo-stakeholders.pdf" target="_blank">Ir a documento</a>
-  </div>
-
-  <!-- Fase 5 -->
-  <div class="card">
-    <h3>Fase 5: Involucramiento de la Población Local</h3>
-    <p>Integrar a la comunidad en el impulso turístico, generando empleo y desarrollo local.</p>
-    <a class="document-link" href="soportes/investigaciones/fase5-relacion-actores.pdf" target="_blank">Ir a documento</a>
-  </div>
-
-  <!-- Fase 6 -->
-  <div class="card">
-    <h3>Fase 6: Visualización de Espacios con Potencial</h3>
-    <p>Identificación técnica de áreas estratégicas con alto valor biológico para infraestructura y jardín botánico.</p>
-    <a class="document-link" href="soportes/investigaciones/fase6-stakeholders.pdf" target="_blank">Ir a documento</a>
-  </div>
-
-  <!-- Fase 7 -->
-  <div class="card">
-    <h3>Fase 7: Formación Turística Sostenible</h3>
-    <p>Programas educativos y talleres sobre sostenibilidad y botánica para personal y huéspedes.</p>
-    <a class="document-link" href="soportes/investigaciones/fase7-mercado-potencial.pdf" target="_blank">Ir a documento</a>
-  </div>
-
-  <!-- Fase 8 -->
-  <div class="card">
-    <h3>Fase 8: Uso Responsable de Recursos Naturales</h3>
-    <p>Implementación de prácticas sostenibles: energías renovables, manejo de residuos y captación de agua lluvia.</p>
-    <a class="document-link" href="soportes/investigaciones/fase8-proyeccion-mercado.pdf" target="_blank">Ir a documento</a>
-  </div>
-
-  <!-- Fase 9 -->
-  <div class="card">
-    <h3>Fase 9: Fomento de Incentivos</h3>
-    <p>Aplicación de beneficios para empresas que promueven prácticas ecoturísticas y de conservación.</p>
-    <a class="document-link" href="soportes/investigaciones/fase9-canvas.pdf" target="_blank">Ir a documento</a>
-  </div>
-
-  <!-- Fase 10 -->
-  <div class="card">
-    <h3>Fase 10: Líneas de Crédito y Subsidios Específicos</h3>
-    <p>Acceso a mecanismos financieros sectoriales diseñados para infraestructura ecológica y turismo sostenible.</p>
-    <a class="document-link" href="soportes/investigaciones/fase10-tipos-involucrados.pdf" target="_blank">Ir a documento</a>
-  </div>
-
-  <a class="back-link" href="index.html">← Volver a página principal</a>
-</div>
 
 </body>
 </html>
