--- a/fases-ecohotel.html
+++ b/fases-ecohotel.html
@@ -90,22 +90,12 @@
   <div class="container">
     <h2>Fases del Proyecto Ecohotel “Los Arrendajos”</h2>
     <p class="description">
-      El proyecto Eco-hotel Los Arrendajos es una iniciativa de turismo sostenible ubicada en Villavicencio, Meta, que integra el hospedaje ecológico con la conservación ambiental a través de un jardín botánico educativo y sensorial. Su propósito central es ofrecer una experiencia de turismo regenerativo que promueva el uso responsable de los recursos naturales y la educación ambiental.
+      El proyecto Eco-hotel Los Arrendajos es una iniciativa de turismo sostenible ubicada en Villavicencio, Meta, que integra el hospedaje ecológico con la conservación ambiental a través de un jardín botánico educativo y sensorial. Su propósito central es ofrecer una experiencia de turismo regenerativo que promueva el uso responsable de los recursos naturales y la educación ambiental. A continuación se describen las fases (1 a 10) que componen su desarrollo.
     </p>
 
-    <!-- Fase 1 -->
+    <!-- Fase 1: Generalidades -->
     <div class="card">
-      <h3>Fase 1: Estudio Normativo</h3>
-      <h4>Objetivo:</h4>
-      <p>Analizar el marco legal y regulatorio aplicable al sector turístico para garantizar el cumplimiento de normativas.</p>
-      <h4>Descripción:</h4>
-      <p>Se revisan leyes, decretos y reglamentaciones locales y nacionales relacionadas con turismo y sostenibilidad.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <!-- Fase 2 -->
-    <div class="card">
-      <h3>Fase 2: Generalidades del Proyecto</h3>
+      <h3>Fase 1 – Generalidades del Proyecto</h3>
       <h4>Objetivo:</h4>
       <p>Presentar la propuesta del Ecohotel Los Arrendajos, sus objetivos, alcance y contexto general.</p>
       <h4>Descripción:</h4>
@@ -113,69 +103,9 @@
       <a href="soportes/investigaciones/formulacion-de-proyectos/generalidades-del-proyecto-del-ecohotel.pdf" target="_blank">Ir a documento</a>
     </div>
 
-    <!-- Fase 3 -->
+    <!-- Fase 2: Modelo CANVAS -->
     <div class="card">
-      <h3>Fase 3: Mapa de Valor</h3>
-      <h4>Objetivo:</h4>
-      <p>Representar los elementos estratégicos y la propuesta de valor del Ecohotel para clientes y stakeholders.</p>
-      <h4>Descripción:</h4>
-      <p>Se identifica lo que distingue al proyecto frente a la competencia y se clarifican beneficios clave para los visitantes.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <!-- Fase 4 -->
-    <div class="card">
-      <h3>Fase 4: Mapeo de Stakeholders</h3>
-      <h4>Objetivo:</h4>
-      <p>Identificar y analizar los grupos de interés y actores clave del proyecto.</p>
-      <h4>Descripción:</h4>
-      <p>Se estudia el nivel de influencia y participación de cada stakeholder, buscando integrar intereses y cooperación.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <!-- Fase 5 -->
-    <div class="card">
-      <h3>Fase 5: Relación de Actores</h3>
-      <h4>Objetivo:</h4>
-      <p>Listar y describir los actores involucrados en el proyecto para coordinar su participación.</p>
-      <h4>Descripción:</h4>
-      <p>Incluye comunidades locales, entidades gubernamentales y aliados estratégicos en el desarrollo del Ecohotel.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <!-- Fase 6 -->
-    <div class="card">
-      <h3>Fase 6: Stakeholders</h3>
-      <h4>Objetivo:</h4>
-      <p>Definir perfiles, roles y responsabilidades de cada stakeholder dentro del proyecto.</p>
-      <h4>Descripción:</h4>
-      <p>Se asignan responsabilidades claras para garantizar la colaboración efectiva y la sostenibilidad del proyecto.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/stakeholders.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <!-- Fase 7 -->
-    <div class="card">
-      <h3>Fase 7: Mercado Potencial</h3>
-      <h4>Objetivo:</h4>
-      <p>Analizar la demanda potencial del Ecohotel Los Arrendajos y sus oportunidades de mercado.</p>
-      <h4>Descripción:</h4>
-      <p>Incluye segmentación de clientes, estudios de competencia y proyecciones de demanda turística ecológica.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <!-- Fase 8 -->
-    <div class="card">
-      <h3>Fase 8: Proyección de Mercado</h3>
-      <h4>Objetivo:</h4>
-      <p>Estimar ingresos y demanda futura del proyecto Ecohotel para asegurar la viabilidad económica.</p>
-      <h4>Descripción:</h4>
-      <p>Se proyectan ingresos, ocupación y tendencias de mercado en un horizonte de 5 a 10 años.</p>
-      <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">Ir a documento</a>
-    </div>
-
-    <!-- Fase 9 -->
-    <div class="card">
-      <h3>Fase 9: Modelo CANVAS</h3>
+      <h3>Fase 2 – Modelo CANVAS</h3>
       <h4>Objetivo:</h4>
       <p>Visualizar la estructura de negocio y la propuesta de valor del Ecohotel de manera estratégica.</p>
       <h4>Descripción:</h4>
@@ -183,14 +113,84 @@
       <a href="soportes/investigaciones/formulacion-de-proyectos/modelo-CANVAS.pdf" target="_blank">Ir a documento</a>
     </div>
 
-    <!-- Fase 10 -->
+    <!-- Fase 3: Estudio Normativo -->
     <div class="card">
-      <h3>Fase 10: Tipos de Involucrados</h3>
+      <h3>Fase 3 – Estudio Normativo</h3>
+      <h4>Objetivo:</h4>
+      <p>Analizar el marco legal y regulatorio aplicable al sector turístico para garantizar el cumplimiento de normativas.</p>
+      <h4>Descripción:</h4>
+      <p>Se revisan leyes, decretos y reglamentaciones locales y nacionales relacionadas con turismo y sostenibilidad.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/estudio-normativo.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 4: Mercado Potencial -->
+    <div class="card">
+      <h3>Fase 4 – Mercado Potencial</h3>
+      <h4>Objetivo:</h4>
+      <p>Analizar la demanda potencial del Ecohotel Los Arrendajos y sus oportunidades de mercado.</p>
+      <h4>Descripción:</h4>
+      <p>Incluye segmentación de clientes, estudios de competencia y proyecciones de demanda turística ecológica.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mercado-potencial-ecohotel.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 5: Proyección de Mercado -->
+    <div class="card">
+      <h3>Fase 5 – Proyección de Mercado</h3>
+      <h4>Objetivo:</h4>
+      <p>Estimar ingresos y demanda futura del proyecto Ecohotel para asegurar la viabilidad económica.</p>
+      <h4>Descripción:</h4>
+      <p>Se proyectan ingresos, ocupación y tendencias de mercado en un horizonte de 5 a 10 años.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/proyeccion-de-mercado.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 6: Stakeholders -->
+    <div class="card">
+      <h3>Fase 6 – Stakeholders</h3>
+      <h4>Objetivo:</h4>
+      <p>Definir perfiles, roles y responsabilidades de cada stakeholder dentro del proyecto.</p>
+      <h4>Descripción:</h4>
+      <p>Se asignan responsabilidades claras para garantizar la colaboración efectiva y la sostenibilidad del proyecto.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/stakeholders.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 7: Tipos de Involucrados -->
+    <div class="card">
+      <h3>Fase 7 – Tipos de Involucrados</h3>
       <h4>Objetivo:</h4>
       <p>Clasificar los diferentes tipos de actores y su grado de participación en el proyecto.</p>
       <h4>Descripción:</h4>
       <p>Se categoriza según su rol, influencia y nivel de compromiso para optimizar la gestión del Ecohotel.</p>
       <a href="soportes/investigaciones/formulacion-de-proyectos/tipos-de-involucrados.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 8: Relación de Actores -->
+    <div class="card">
+      <h3>Fase 8 – Relación de Actores</h3>
+      <h4>Objetivo:</h4>
+      <p>Listar y describir los actores involucrados en el proyecto para coordinar su participación.</p>
+      <h4>Descripción:</h4>
+      <p>Incluye comunidades locales, entidades gubernamentales y aliados estratégicos en el desarrollo del Ecohotel.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/relacion-de-actores.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 9: Mapeo de Stakeholders -->
+    <div class="card">
+      <h3>Fase 9 – Mapeo de Stakeholders</h3>
+      <h4>Objetivo:</h4>
+      <p>Identificar y analizar los grupos de interés y actores clave del proyecto.</p>
+      <h4>Descripción:</h4>
+      <p>Se estudia el nivel de influencia y participación de cada stakeholder, buscando integrar intereses y cooperación.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mapeo-de-stakeholders.pdf" target="_blank">Ir a documento</a>
+    </div>
+
+    <!-- Fase 10: Mapa de Valor -->
+    <div class="card">
+      <h3>Fase 10 – Mapa de Valor</h3>
+      <h4>Objetivo:</h4>
+      <p>Representar los elementos estratégicos y la propuesta de valor del Ecohotel para clientes y stakeholders.</p>
+      <h4>Descripción:</h4>
+      <p>Se identifica lo que distingue al proyecto frente a la competencia y se clarifican beneficios clave para los visitantes.</p>
+      <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Ir a documento</a>
     </div>
 
     <a class="back-link" href="investigaciones.html">← Volver a la página principal</a>
