--- a/fases-ecohotel.html
+++ b/fases-ecohotel.html
@@ -193,7 +193,7 @@
       <a href="soportes/investigaciones/formulacion-de-proyectos/mapa-de-valor.pdf" target="_blank">Ir a documento</a>
     </div>
 
-    <a class="back-link" href="investigaciones.html">← Volver a la página principal</a>
+    <a class="back-link" href="index.html">← Volver a la página principal</a>
 
   </div>
 
