--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="card">
           <h3>Documentos Oficiales SENA</h3>
           <p>Acta académica, certificado final y documento oficial TCOCF del programa técnico.</p>
-          <a href="soportes/educacion/sena.html" target="_blank">Ver detalles</a>
+          <a href="sena.html" target="_blank">Ver detalles</a>
         </div>
       </div>
     </div>
