--- a/sena.html
+++ b/sena.html
@@ -86,7 +86,7 @@
       <a href="soportes/educacion/sena/documento-oficial-tcocf.pdf" target="_blank">Ir a documento</a>
     </div>
 
-    <a class="back-link" href="index.html">← Volver al CV | DSBC</a>
+    <a class="back-link" href="index.html">← Volver a la página principal</a>
   </div>
 
 </body>
